# turtlebot-leader-follower

./: .gitignore  .gitmodules  README.md
src/jack_cline/: CMakeLists.txt  package.xml
src/jack_cline/launch/: velocity_conv.launch
src/jack_cline/nodes/: velocity_conv.py
src/log/: latest_build
src/seniorproject/: CMakeLists.txt  package.xml
src/seniorproject/config/: laser_filter_config.yaml  laser_filter_config.yaml.save
src/seniorproject/launch/: follower.launch  laser_filter.launch  test_clustering.launch
src/seniorproject/nodes/: .follower_controller.py.swp  follower_controller.py  test_clustering.py  test_lidar.py  testlidar.py
src/turtlebot3/turtlebot3_bringup/launch/: turtlebot3_robot.launch  turtlebot3_rpicamera.launch
src/turtlebot3_autorace_2020/: README.md
src/turtlebot3_autorace_2020/control/: CMakeLists.txt  package.xml
src/turtlebot3_autorace_2020/control/launch/: autonomous_driving.launch
src/turtlebot3_autorace_2020/turtlebot3_autorace_camera/calibration/extrinsic_calibration/: projection.yaml
src/turtlebot3_autorace_2020/turtlebot3_autorace_camera/cfg/: ImageProjectionParams.cfg
src/turtlebot3_autorace_2020/turtlebot3_autorace_camera/launch/: extrinsic_camera_calibration.launch  intrinsic_camera_calibration.launch
src/turtlebot3_autorace_2020/turtlebot3_autorace_detect/launch/: detect_lane.launch
src/turtlebot3_autorace_2020/turtlebot3_autorace_detect/nodes/: detect_lane
src/turtlebot3_autorace_2020/turtlebot3_autorace_driving/nodes/: control_lane
